Fixed blue tap highlighting on mobile and updated mathematical background cover properties

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
   margin: 0;
   padding: 0;
   user-select: none;
+  -webkit-tap-highlight-color: transparent; /* Removes the annoying transparent blue flash on mobile phones */
 }
 
 body {
@@ -45,9 +46,9 @@ body {
   width: 100%;
   height: 100%;
   background-image: url('/Background_image.jpeg');
-  background-size: 100% 100%;
-  background-position: center;
-  background-repeat: no-repeat;
+  background-size: auto 100%; /* Smart fix: exactly matches height without zooming */
+  background-position: center bottom;
+  background-repeat: repeat-x; /* If on a laptop, it places copies side by side beautifully */
   z-index: 1;
 }
 
